--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>hola hp mundo </title>
 </head>
 <body>
-    <p>hola estudiantes esta mierda a mi no me funciona</p>
+    <p>hola estudiantes esta mierda a mi no me funciona
+
+        Hola. Esta es una prueba.
+    </p>
 </body>
 </html>
